force-app/main/default/objects/Billing_Information__c/Billing_Information__c.object-meta.xml
<CustomObject>
    <description>This will hold billing related information for a project.</description>
    <label>Billing Information</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Billing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>