force-app/main/default/objects/Billing_Information__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>This field is used to identify that It&apos;s Vendor/Customer.</description>
    <formula>Project__r.Customer__r.RecordType.DeveloperName</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>