force-app/main/default/objects/Billing_Information__c/fields/Approval_Comment_Check__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment_Check__c</fullName>
    <description>used in Billing approval for making comment required on rejection</description>
    <label>Approval Comment Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>