force-app/main/default/objects/Billing_Information__c/fields/Approved_by_AR_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_AR_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used internally in Billing Approval Process</description>
    <label>Approved by AR Manager</label>
    <type>Checkbox</type>
</CustomField>