force-app/main/default/objects/Billing_Information__c/fields/Billing_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Approval_Status__c</fullName>
    <description>will hold status of the approval</description>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload Raw  Data</fullName>
                <default>true</default>
                <label>Upload Raw  Data</label>
            </value>
            <value>
                <fullName>Sent to SDM</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Sent to AR Executive/ AR Sr. Executive</fullName>
            </value>
            <value>
                <fullName>Sent to AR Manager</fullName>
            </value>
            <value>
                <fullName>Sent to AR Head</fullName>
            </value>
            <value>
                <fullName>Sent to Client SDM</fullName>
            </value>
            <value>
                <fullName>Sent to TIG SDM</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Billing Approved</fullName>
            </value>
            <value>
                <fullName>Rejected by AR Executive/ AR Sr. Executive</fullName>
                <isActive>false</isActive>
                <label>Rejected by AR Executive/ AR Sr. Executive</label>
            </value>
            <value>
                <fullName>Rejected by AR Head</fullName>
                <isActive>false</isActive>
                <label>Rejected by AR Head</label>
            </value>
            <value>
                <fullName>Rejected by AR Manager</fullName>
                <isActive>false</isActive>
                <label>Rejected by AR Manager</label>
            </value>
            <value>
                <fullName>Rejected by Client SDM</fullName>
                <isActive>false</isActive>
                <label>Rejected by Client SDM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>