force-app/main/default/objects/Billing_Information__c/fields/Current_Approval__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval__c</fullName>
    <label>Current Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>