force-app/main/default/objects/Billing_Information__c/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <label>Vendor</label>
</RecordType>