force-app/main/default/objects/Billing_Information__c/listViews/AP_Executive_Sr_AP_Executive_Billing_Information.listView-meta.xml
<ListView>
    <fullName>AP_Executive_Sr_AP_Executive_Billing_Information</fullName>
    <filterScope>Queue</filterScope>
    <label>AP Executive/Sr. AP Executive</label>
    <queue>AP_Executive_Sr_AP_Executive</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>