force-app/main/default/objects/Billing_Information__c/listViews/AR_Head_Billing_Information.listView-meta.xml
<ListView>
    <fullName>AR_Head_Billing_Information</fullName>
    <filterScope>Queue</filterScope>
    <label>AR Head</label>
    <queue>AR_Head</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>