force-app/main/default/objects/Billing_Information__c/listViews/AR_Managers_Billing_Information.listView-meta.xml
<ListView>
    <fullName>AR_Managers_Billing_Information</fullName>
    <filterScope>Queue</filterScope>
    <label>AR Managers</label>
    <queue>AR_Managers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>