force-app/main/default/objects/Billing_Information__c/listViews/Client_SDM_Billing_Information.listView-meta.xml
<ListView>
    <fullName>Client_SDM_Billing_Information</fullName>
    <filterScope>Queue</filterScope>
    <label>Client SDMs</label>
    <queue>Client_SDMs</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>