force-app/main/default/objects/Billing_Information__c/listViews/Pending_Billing_Sheets.listView-meta.xml
<ListView>
    <fullName>Pending_Billing_Sheets</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Billing_Start_Date__c</columns>
    <columns>Billing_End_Date__c</columns>
    <columns>Billing_Approval_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Billing_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Rework,Sent to AR Executive/ AR Sr. Executive,Sent to AR Manager,Sent to AR Head,Sent to Client SDM,Partially Approved</value>
    </filters>
    <label>Pending Billing Sheets</label>
</ListView>