force-app/main/default/objects/Billing_Information__c/listViews/Project_Queue_Billing_Information.listView-meta.xml
<ListView>
    <fullName>Project_Queue_Billing_Information</fullName>
    <filterScope>Queue</filterScope>
    <label>Project Queue</label>
    <queue>Project_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>